--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -9,10 +9,9 @@
     color: white;
     background: var(--gradient-color);
 }
-
 .form-container {
-    width: var(--card-width);
-    height: var(--card-height);
+    width: 70%;
+    height: 80%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -22,70 +21,153 @@
     box-shadow: 0 0 20px pink;
     text-align: center;
     border: 1px solid rgba(255, 192, 203, 0.56);
+    transition: width 0.5s;
+}
+.right-side{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 50%;
+    height: 100%;
+    border-radius: 16px;
+    transition: width 0.4s ease;
+}
+.left-side{
+    width: 50%;
+    height: 100%;
+    background: var(--gradient-color);
+    border-radius: 16px;
+    transition: width 0.4s ease;
+}
+@media (max-width: 70rem){
+    .left-side{
+        width: 0 !important;
+    }
+    .right-side{
+        width: 100% !important;
+    }
+    .image-container img{
+        width: 0 !important;
+        height: 0 !important;
+    }
+}
+@media (max-width: 60rem){
+    .form-container{
+        width: 90%;
+    }
+}
+.image-container img{
+    transition: width 0.4s ease, height 0.4s ease;
+}
+.form-headers{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.4rem;
+    width: 100%;
+    height: 20%;
+}
+.form{
+    width: 90%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
 
+.image-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: width 0.4s ease,height 0.4s ease;
 }
 .input-container{
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
+    gap: 0.5rem;
 }
-.form{
-    width: 50vw;
+.submit-container{
+    width: 100%;
+    height: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-wrap:wrap;
-    gap: 1rem;
+    text-align: center;
+    gap: 0.5rem;
 }
 .form-label{
-    width: 13vw;
+    width: 98%;
     font-size: 1rem;
-    margin-bottom: 5px;
-    display: block;
     font-weight: bold;
     color: white;
     text-align: left;
 }
 .form-input{
-    width: 12vw;
-    padding: 10px;
-    margin-bottom: 15px;
+    width: 98%;
+    height: 2rem;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 1rem;
-    transition: border-color 0.3s;
+    transition: outline-color 0.5s ease;
 }
-.form-input{
-    outline: 3px solid grey;
+.input-container[aria-details="email"] label{
+    color:black;
+}
+.form-input[type="email"]{
+    background-image: url("src/assets/form/mail.png");
+    background-position: 98%;
+    background-repeat: no-repeat;
+    background-size: 25px 25px;
+    /*padding-left: 30px;*/
+}
+.form-input[type="email"]:not(:placeholder-shown):valid{
+    background-image: url("src/assets/form/mail_check.png");
+}
+.form-input[type="password"]{
+    background-image: url("src/assets/form/password_eye.png");
+    background-position: 98%;
+    background-repeat: no-repeat;
+    background-size: 25px 25px;
+    /*padding-left: 30px;*/
+}
+.form-input:not(:focus){
+    outline: 3px solid rgba(128, 128, 128, 0.41);
 }
 .form-input:not(:placeholder-shown):valid{
-    outline: 3px solid #85d5af;
+    outline: 3px solid rgb(127, 255, 101);
 }
 .form-input:not(:placeholder-shown):invalid{
-    outline: 3px solid #ff9292;
+    outline: 3px solid rgb(255, 108, 108);
 }
 .form-input:not(:placeholder-shown):invalid:focus{
-    outline: 3px solid #ffe692;
+    outline: 3px solid rgb(255, 222, 118);
 }
 .input-pair{
+    width: 99%;
     display:flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
-
+    gap: 1.2rem;
 }
 
 .input-container select {
     appearance: none;
-    width: 13vw;
+    width: 100%;
 }
 
 #submit-button{
-    width: 13vw;
+    width: 73%;
     height: 40px;
     font-size: 1.5rem;
     font-weight: bold;
@@ -100,18 +182,11 @@
     align-items: center;
     text-align: center;
 }
-.forgot-password-button{
-    width: 100%;
-    font-size: 0.8rem;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    text-align: right;
-    color: white;
-}
+
 #submit-button.active {
     cursor: pointer;
     color: white;
+    border: 1px solid white;
     background: linear-gradient(var(--gradient-angle), var(--color-1), var(--color-2), var(--color-3));
     transition: --color-1 1s, --color-2 1s, --color-3 1s;
 }
@@ -125,6 +200,18 @@
     --color-1: var(--color-1-bright);
     --color-2: var(--color-2-bright);
     --color-3: var(--color-3-bright);
+}
+.forgot-password-button{
+    width: 100%;
+    margin-left: 15px;
+    height: 45px;
+    font-size: 0.8rem;
+    font-weight: bold;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    text-align: right;
+    color: white;
 }
 .have-an-account{
     display: flex;
@@ -140,29 +227,4 @@
     font-size: 1rem;
     font-weight: bold;
     color: white;
-}
-
-.right-side{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-    width: 55%;
-    height: 100%;
-    border-radius: 16px;
-
-}
-.left-side{
-    width: 45%;
-    height: 100%;
-    background: var(--gradient-color);
-    border-radius: 16px;
-}
-.image-container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
