--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -77,7 +77,9 @@
     align-items: center;
     justify-content: space-evenly;
 }
-
+#login{
+    gap: 1rem;
+}
 .image-container{
     width: 100%;
     height: 100%;
@@ -95,6 +97,7 @@
     text-align: center;
     gap: 0.5rem;
 }
+
 .submit-container{
     width: 100%;
     height: 10%;
@@ -120,9 +123,7 @@
     font-size: 1rem;
     transition: outline-color 0.5s ease;
 }
-.input-container[aria-details="email"] label{
-    color:black;
-}
+
 .form-input[type="email"]{
     background-image: url("src/assets/form/mail.png");
     background-position: 98%;
@@ -203,7 +204,6 @@
 }
 .forgot-password-button{
     width: 100%;
-    margin-left: 15px;
     height: 45px;
     font-size: 0.8rem;
     font-weight: bold;
