--- a/src/index.css
+++ b/src/index.css
@@ -5,19 +5,21 @@
     --color-2: #591999;
     --color-3: rgb(99, 14, 173);
     --gradient-color: linear-gradient(var(--gradient-angle), var(--color-1) 0%, var(--color-2) 50%, var(--color-3) 100%);
-    --color-1-bright: rgb(115, 0, 255);
-    --color-2-bright: rgb(221, 0, 255);
-    --color-3-bright: rgb(247, 0, 255);
+    --color-1-bright: rgba(115, 0, 255, 0.71);
+    --color-2-bright: rgba(160, 0, 255, 0.56);
+    --color-1-brighter: rgb(115, 0, 255);
+    --color-2-brighter: rgb(164, 0, 255);
+    --color-3-brighter: rgb(247, 0, 255);
     --card-width: 60vw;
     --card-height: 70vh;
 }
 
-@property --color-1{
+@property --color-1-bright{
     syntax: "<color>";
     initial-value: transparent;
     inherits: true;
 }
-@property --color-2{
+@property --color-2-bright{
     syntax: "<color>";
     initial-value: transparent;
     inherits: true;
