--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -44,39 +44,41 @@ button:focus, button:focus-visible {
     outline: 90px auto -webkit-focus-ring-color;
 }
 
-.navCourses {
-    gap: 1rem;
-    margin-top: 1rem;
-    margin-left: 1rem;
-    padding: 2rem;
-    max-width: 30%;
-    min-width: 20%;
-    max-height: 60%;
-    position: page;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
-    flex-direction: column;
-    border: 3px solid #007bff;
-    border-radius: 20px;
-}
+/*.navCourses {*/
+/*    gap: 1rem;*/
+/*    margin-top: 1rem;*/
+/*    margin-left: 1rem;*/
+/*    padding: 2rem;*/
+/*    max-width: 30%;*/
+/*    min-width: 20%;*/
+/*    max-height: 60%;*/
+/*    position: page;*/
+/*    display: inline-flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    align-content: center;*/
+/*    justify-items: center;*/
+/*    flex-direction: column;*/
+/*    border: 3px solid #007bff;*/
+/*    border-radius: 20px;*/
+/*}*/
 
-.ListCard {
-    margin-top: 1rem;
-    padding: 2rem;
-    width: 50%;
-    position: relative;
-    display: flex;
-    align-items: normal;
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
-    flex-direction: column;
-    border: 3px solid #007bff;
-    border-radius: 20px;
-}
+/*.ListCard {*/
+/*    margin-top: 1rem;*/
+/*    padding: 1rem;*/
+/*    width: 100%;*/
+/*    height: 60%;*/
+/*    max-width: 100%;*/
+/*    position: relative;*/
+/*    display: flex;*/
+/*    align-items: normal;*/
+/*    justify-content: center;*/
+/*    align-content: center;*/
+/*    justify-items: center;*/
+/*    flex-direction: column;*/
+/*    !*border: 3px solid #007bff;*!*!
+!*    !*border-radius: 20px;*!*!
+!*}*/
 
 .buttons {
     display: inline;
