--- a/src/pages/Course.css
+++ b/src/pages/Course.css
@@ -10,6 +10,9 @@
     /*border: 6px solid green;*/
     /*overflow: hidden;*/
 }
+.upper-container{
+    border: 3px solid salmon;
+}
 .course-page-header{
     display: flex;
     flex-direction: column;
@@ -20,7 +23,7 @@
     height:5rem;
     font-size:2.2rem;
     font-weight:bold;
-    color: white;
+    color: var(--color-scheme);
     background-color: var(--background-color);
 }
 .course-page-description{
@@ -28,10 +31,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    width: 90%;
+    text-align: left;
+    width: 30rem;
     font-size: 1.2rem;
-
 }
 .add-new-form-container{
     width: 100%;
@@ -46,10 +48,10 @@
     bottom: 3%;
     border-radius: 100%;
 
-    background-color: var(--background-color);
-    color: white;
+    background-color: var(--background-color    );
+    color: var(--color-scheme);
     border: none;
-    box-shadow: 0 0 3px rebeccapurple;
+    box-shadow: 0 0 3px 2px var(--color-scheme);
     font-size: 3rem;
     cursor: pointer;
     transition: all 0.5s ease;
@@ -57,7 +59,7 @@
 }
 .add-new:hover{
     transform: scale(1.1);
-    box-shadow: 0 0 10px rebeccapurple;
+    box-shadow: 0 0 10px 2px var(--color-scheme);
 }
 
 .material-page {
@@ -83,7 +85,7 @@
     width:8vw;
     height: 3vh;
     font-size: 20px;
-    background-color: white;
+    background-color: var(--background-color);
     color:rebeccapurple;
     border:1px solid rebeccapurple;
     margin-top: 20px;
