--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -9,27 +9,6 @@
 
 }
 
-.upper-container {
-    width: 100vw;
-    height: 15vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background: var(--background-color);
-    color: white;
-}
-.lower-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: flex-start;
-    width: 100vw;
-    height: 70vh;
-
-}
 .search-courses {
     padding: 10px;
     margin-right: 10px;
@@ -96,15 +75,15 @@ button:focus, button:focus-visible {
     border: none;
     background: transparent;
     cursor: pointer;
-    color: white;
+    color: var(--color-scheme);
 }
 
 .search-input {
     min-width: 350px;
     padding: 10px;
-    border: none;
     border-radius: 5px;
     font-size: 1.1rem;
+    border: 3px solid var(--color-scheme);
 }
 
 .search-bar-container {
