--- a/src/pages/Course.css
+++ b/src/pages/Course.css
@@ -5,14 +5,12 @@
     flex-direction: column;
     text-align: center;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     font-weight: 600;
     /*border: 6px solid green;*/
     /*overflow: hidden;*/
 }
-.upper-container{
-    border: 3px solid salmon;
-}
+
 .course-page-header{
     display: flex;
     flex-direction: column;
@@ -69,7 +67,7 @@
     flex-direction: column;
     text-align: center;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     font-weight: 600;
 }
 .course-content{
