--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,9 @@
     --color-2-brighter: rgb(164, 0, 255);
     --color-3-brighter: rgb(247, 0, 255);
     --navbar-height: 6em;
-    --upper-container-height: 5em
-    /*--card-width: 60vw;*/
-    /*--card-height: 70vh;*/
+    --upper-container-height: 5em;
+    --min-desktop-height: 1366px;
+    --min-desktop-width: 768px;
 }
 
 @property --color-1-bright{
@@ -33,10 +33,17 @@
     inherits: true;
 }
 
-body {
-    display: flex;
+*,html,body {
     margin: 0;
-    color: var(--color-scheme);
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+.flex{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 .Logo{
     margin-top: 10%;
@@ -46,8 +53,8 @@ body {
 }
 .upper-container {
     width: 100%;
-    margin-top: var(--navbar-height);
-    min-height: 15em;
+    /*margin-top: var(--navbar-height);*/
+    min-height: 12em;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -63,6 +70,6 @@ body {
     text-align: center;
     justify-content: flex-start;
     width: 100%;
-    height: calc(100vh - 25rem);
+    height: auto;
     color: var(--color-scheme);
 }
