--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -1,12 +1,12 @@
 .dashboard {
     width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     text-align: center;
     align-items: center;
     justify-content: center;
     font-weight: 600;
-
 }
 
 .search-courses {
