--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     text-align: center;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     font-weight: 600;
 }
 
