--- a/src/index.css
+++ b/src/index.css
@@ -32,13 +32,11 @@
     initial-value: transparent;
     inherits: true;
 }
-
-*,html,body {
+* {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
 }
+
 .flex{
     display: flex;
     flex-direction: row;
@@ -53,7 +51,7 @@
 }
 .upper-container {
     width: 100%;
-    /*margin-top: var(--navbar-height);*/
+    margin-top: var(--navbar-height);
     min-height: 12em;
     display: flex;
     flex-direction: row;
@@ -72,4 +70,5 @@
     width: 100%;
     height: auto;
     color: var(--color-scheme);
+
 }
