--- a/src/index.css
+++ b/src/index.css
@@ -49,10 +49,19 @@
     height: 50px;
     cursor: pointer;
 }
+
+body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    overflow-y: auto
+}
+
 .upper-container {
     width: 100%;
-    margin-top: var(--navbar-height);
-    min-height: 12em;
+    /*margin-top: var(--navbar-height);*/
+    /*min-height: 12em;*/
     display: flex;
     flex-direction: row;
     justify-content: center;
