--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -155,7 +155,7 @@
     --webkit-outline: transparent;
 }
 .form-input:not(:focus) + .requirement-message{
-    color:red;
+    scale:0;
 }
 
 /*.form-input[required]:not(:placeholder-shown):invalid:focus + requirement-message{*/
