--- a/src/Components/Login&Registration/OtpLoading/OtpLoading.css
+++ b/src/Components/Login&Registration/OtpLoading/OtpLoading.css
@@ -1,6 +1,7 @@
 .loading{
     position: absolute;
     backdrop-filter: blur(10px);
+    background-color:white;
     width: 100%;
     height: 100%;
     border-radius: 20px;
