--- a/src/Components/CssFiles/NavBar.css
+++ b/src/Components/CssFiles/NavBar.css
@@ -51,6 +51,25 @@
     transition: transform .3s ease-in-out;
 
 }
+.navbar-welcome {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 4px;
+    width: 15%;
+
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: var(--color-scheme);
+    text-decoration: none;
+
+}
+
 .navbar-button {
     height: 100%;
     display: flex;
@@ -68,8 +87,9 @@
     text-decoration: none;
     cursor: pointer;
     transition: box-shadow 0.4s ease;
-
 }
+
+
 .navbar-button:hover{
     box-shadow: 0 5px 0 0 var(--color-scheme);
 }
